// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should mount buttons It renders back button 1`] = `
<span
  className="page-user__back-button"
  onClick={[Function]}
>
  <img
    src="arrowBack.svg"
  />
</span>
`;

exports[`It should mount buttons It should render button pay to index 1`] = `
<Component
  to="/"
>
  <button
    className="main--pay"
    type="submit"
  >
    Pagar
  </button>
</Component>
`;

exports[`It should mount buttons It should render button pay width width and height 1`] = `
<Component>
  <button
    className="main--pay"
    type="submit"
  >
    Pagar
  </button>
</Component>
`;
